# LLaVA-Steering

./: .gitignore  README.md  pyproject.toml  train.sh
datasets_generator/eval_or_test/: flickr30k.py  iconQA_blank.py  iconQA_text.py  okvqa.py  scienceQA.py  vizwiz.py  vqav2.py
datasets_generator/train/: flickr30k.py  iconQA_blank.py  iconQA_text.py  okvqa.py  scienceQA.py  vizwiz.py  vqav2.py
scripts/: convert_vizwiz_for_submission.py
scripts/eval/: chair.sh  gqa.sh  mmmu.sh  mmvet.sh  pope.sh  sqa.sh  textvqa.sh  vqav2.sh
scripts/exp/exp_1st_stage_pretrain/: pretrain_phi2.sh
scripts/exp/exp_2nd_stage_finetune/: adapter_2nd_stage.sh  full_2nd_stage.sh  (+4 more)
scripts/text_eval/: GSM8K.sh  hellaswag.sh  mmlu.sh
scripts/train/: finetune_phi2.sh
tinyllava/data/: dataset.py  text_preprocess.py
tinyllava/eval/: chair_utils.py  eval_gpt4_mmhal.py  eval_halbench.py  eval_iconqa_blank.py  eval_iconqa_text.py  eval_text_caps_test.py  halbench_utils.py  model_vqa.py  model_vqa_chair.py  model_vqa_halbench.py  model_vqa_iconqa_blank.py  model_vqa_iconqa_text.py  model_vqa_loader.py  model_vqa_mmhal.py  model_vqa_mmmu.py  model_vqa_pope.py  model_vqa_science.py  model_vqa_textcaps.py
tinyllava/model/: __init__.py  configuration_tinyllava.py  intervention_models.py  load_model.py  modeling_tinyllava.py  mores_mappings.py  mores_model_shell.py  mores_model_utils.py
tinyllava/train/: train.py  trainer_callbacks.py
tinyllava/training_recipe/: adapter_recipe.py  base.py  ia3_recipe.py  lora_recipe.py  oft_recipe.py  reft_recipe.py
tinyllava/utils/: arguments.py
(+14 files in other folders)
